<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagenfondo"
    tools:context=".MainActivity">

    <!-- Título principal -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtTitulo"
        android:textColor="@color/textos"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="16dp"/>

    <!-- Botón Generar Avatar -->
    <Button
        android:id="@+id/btnAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generar_avatar"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Imagen del Avatar -->
    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerInside"
        android:src="@drawable/baseline_account_box_24"
        app:layout_constraintTop_toBottomOf="@id/btnAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- TextView para nombre -->
    <TextView
        android:id="@+id/txt_nombre_elegido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre_elegido"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:background="#80000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <!-- Texto de atributos (Vida, Magia, Fuerza, Velocidad) -->

    <TextView
        android:id="@+id/txt_vida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:padding="8dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Vida:"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nombre_elegido" />

    <TextView
        android:id="@+id/txt_magia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:padding="8dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Magia:"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_vida" />

    <TextView
        android:id="@+id/txt_fuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:background="#80000000"
        android:padding="8dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Fuerza:"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_magia" />

    <TextView
        android:id="@+id/txt_velocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="24dp"
        android:background="#80000000"
        android:padding="8dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="Velocidad:"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fuerza" />

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_velocidad" />

</androidx.constraintlayout.widget.ConstraintLayout>
